fixed styling on smaller screens

--- a/frontend/src/components/PlayerFilters.css
+++ b/frontend/src/components/PlayerFilters.css
@@ -48,7 +48,6 @@
   background: #7768f6;
   color: #fff;
   border-radius: 22px;
-  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.18);
   z-index: 10;
   padding: 8px 0;
 }
@@ -284,7 +283,7 @@
 .player-filters-title {
   color: #d8d7d7;
   font-size: 16px !important;
-  margin-bottom: 12px;
+  margin-bottom: 30px;
   text-align: center;
 }
 .player-filters-divider {
@@ -345,8 +344,8 @@
   }
   .custom-slider-box {
     width: 100% !important;
-    min-width: 0 !important;
-    max-width: 400px;
+    min-width: 300px;
+    max-width: 500px;
     margin: 0 auto;
     padding: 0;
   }
